objects/AutomatedRenewalsMappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SFDC-3186 Field Mappings for Automated Renewals creation batch</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 Represents if the mapping is active. Only active mappings are used in Renewals Automation batch.</description>
        <inlineHelpText>Must be marked active if in use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CriteriaMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 If true, represents that the custom setting record is a criteria mapping used in business criteria evaluations.</description>
        <inlineHelpText>If true, represents that the custom setting record is a criteria mapping used in business criteria evaluations.</inlineHelpText>
        <label>Criteria Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>SFDC-3186 Gives the additional details about custom setting record</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieldMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 If true, represents that the custom setting record is a field to field mapping</description>
        <inlineHelpText>If true, represents that the custom setting record is a field to field mapping</inlineHelpText>
        <label>Field Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RuleName__c</fullName>
        <description>SFDC-3186 Rule Name(if needed) to segregate mappings for different use cases</description>
        <label>Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <description>SFDC-3186 Source Field Name</description>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceObject__c</fullName>
        <description>SFDC-3186 Source Object Name</description>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceValue__c</fullName>
        <description>SFDC-3186 Represents the source value</description>
        <label>Source Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <description>SFDC-3186 Target Field Name</description>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObject__c</fullName>
        <description>SFDC-3186 Target Object Name</description>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetValue__c</fullName>
        <description>SFDC-3186 Represents Target Value</description>
        <label>Target Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3186 If true, represents that the custom setting record is a value to value mapping. Please populate Source Value and Target Value fields.</description>
        <inlineHelpText>If true, represents that the custom setting record is a value to value mapping. Please populate Source Value and Target Value fields.</inlineHelpText>
        <label>Value Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <label>Automated Renewals Mappings</label>
    <listViews>
        <fullName>AllCriteriaMappings</fullName>
        <columns>NAME</columns>
        <columns>CriteriaMapping__c</columns>
        <columns>Active__c</columns>
        <columns>SourceObject__c</columns>
        <columns>SourceField__c</columns>
        <columns>SourceValue__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>RuleName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CriteriaMapping__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Criteria Mappings</label>
    </listViews>
    <listViews>
        <fullName>AllFieldMappings</fullName>
        <columns>NAME</columns>
        <columns>FieldMapping__c</columns>
        <columns>Active__c</columns>
        <columns>TargetObject__c</columns>
        <columns>TargetField__c</columns>
        <columns>SourceObject__c</columns>
        <columns>SourceField__c</columns>
        <columns>RuleName__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieldMapping__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Field Mappings</label>
    </listViews>
    <listViews>
        <fullName>AllValueMappings</fullName>
        <columns>NAME</columns>
        <columns>ValueMapping__c</columns>
        <columns>Active__c</columns>
        <columns>SourceField__c</columns>
        <columns>SourceValue__c</columns>
        <columns>TargetField__c</columns>
        <columns>TargetValue__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ValueMapping__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Value Mappings</label>
    </listViews>
    <listViews>
        <fullName>InactiveMappings</fullName>
        <columns>NAME</columns>
        <columns>FieldMapping__c</columns>
        <columns>ValueMapping__c</columns>
        <columns>CriteriaMapping__c</columns>
        <columns>Active__c</columns>
        <columns>TargetObject__c</columns>
        <columns>TargetField__c</columns>
        <columns>TargetValue__c</columns>
        <columns>SourceObject__c</columns>
        <columns>SourceField__c</columns>
        <columns>SourceValue__c</columns>
        <columns>RuleName__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Mappings</label>
    </listViews>
</CustomObject>